25 March 2007

* Handle unlink(2)/fclose failures, led to discovery of a missing fflush before
  fsync and a double-unlink of a tmp file (bad!), also fixed. Part of SF bug
  1687830 from Markus Elfring. Also fix some closedir(3) return value checks.
  I'm still on the fence about close(2). SUSv3 says that it can only die on
  EBADF, EINTR and EIO: the first will cause problems before close, and I don't
  see how the latter can affect anything given that write(2) (or fsync(2) when
  applicable) will have previously returned success (fdm already checks their
  return). OTOH, it would be both tidy and future-proof to check it.

22 March 2007

* Return total number of mails from start function if possible and print 
  "X of Y" when reporting mail fetches with -v.

21 March 2007

* queue-low and queue-high options. Default queue limit is 2.
* Default maximum-size now 32 MB and maximum now 1 GB.

20 March 2007

* -q option to quiet unnecessary chatter.
* If user/pass is not specified on IMAP or POP3 accounts, attempt to read it
  from the ~/.netrc file.
* Redo child fetch stuff so that exec/pipe matches actually works
* Stop exec/pipe matches early if only checking for regexp and it is found.
* Sprinkle a few fsyncs, and block SIGTERM while writing to mboxes.

18 March 2007

* Informational messages now go to stdout rather than stderr.

16 March 2007

* Change so that the child uses poll(2) on all the fds rather than letting
  the fetch-* stuff poll and periodically checking the parent fd.
* Make delivery children be handled in the main loop (fdm.c) along with
  the fetch children. This means that different accounts will not block each
  other when delivering. I tried allowing multiple simultaneous deliveries
  for each account but it doesn't work very well, particularly regarding
  errors.

15 March 2007

* Seriously reduce -v output in favour of -vv and -vvv.
* Save mail in a queue as it is fetched and perform matching/delivery on it