@@ -1,4 +1,4 @@
-/* $Id: deliver-rewrite.c,v 1.44 2007-03-17 12:55:27 nicm Exp $ */
+/* $Id: deliver-rewrite.c,v 1.45 2007-03-26 16:01:38 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -95,8 +95,12 @@ deliver_rewrite_deliver(struct deliver_ctx *dctx, struct action *t)
 				if (len == 0 && md->body == -1)
 					md->body = md->size + 1;
 
-				resize_mail(md, md->size + len + 1);
-
+				if (mail_resize(md, md->size + len + 1) != 0) {
+					log_warn("%s: failed to resize mail",
+					    a->name);
+					goto error;
+				}
+				
 				if (len > 0)
 					memcpy(md->data + md->size, out, len);
 
